5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4006/executions/1662_1392.log
== TEST (2019-04-15 14:08:44) 
-- CODE:
c = float(input("consumo da agua"))
t = 30
m = 10 < 3.00 
s = 10 > 3.50
if ( c < m):
	mensagem = ("vc")
else :
	mensagem = ("ab")
print = (round("c , 2")
-- ERROR:
File "XXXX", line 10
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:09:01) 
-- CODE:
c = float(input("consumo da agua"))
t = 30
m = 10 < 3.00 
s = 10 > 3.50
if ( c < m):
	mensagem = ("vc")
else :
	mensagem = ("ab")

print = (round("c , 2")
-- ERROR:
File "XXXX", line 11
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:35) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print = (round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print = (round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:38:47) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print = (round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print = (round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:16) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print = round("m,2")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print = round("m,2")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:26) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print = round("m,2")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print = round("m,2")
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:40:36) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =(round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:02) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =(round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:41:51) 
-- CODE:
c = float(input(consumo da agua))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =(round



-- ERROR:
File "XXXX", line 1
    c = float(input(consumo da agua))
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:42:53) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =(round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:43:00) 
-- CODE:
c = float(input("consumo da agua"))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =(round("m,2"))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:41) 
-- CODE:
c = float(input())
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =round



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:42) 
-- CODE:
c = float(input())
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =round



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 14:45:49) 
-- CODE:
c = float(input(""))
if ( c < 10):
	m = 3.00 * c + 30
else :
	m = 3.50 * c + 30
print =round



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print =(round("m,2"))
TypeError: type str doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
